# mry

./: .gitignore  2021-08-27.md  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
mry/: Cargo.toml
mry/src/: behavior.rs  callback.rs  lib.rs  matcher.rs  mock.rs  mock_key.rs  mock_locator.rs  mock_objects.rs  mockable.rs  mocks.rs  mry.rs  mry_id.rs  static_mocks.rs
mry/src/mock/: log.rs  logger.rs  logs.rs  mock_result.rs  mod.rs
mry/src/mock_locator/: times.rs
mry/src/rule/: behavior.rs  matcher.rs  mod.rs
mry/src/unsafe_mocks/: behavior.rs  locator.rs  log.rs  matcher.rs  mock.rs  mockable.rs  mocks.rs  mod.rs  mry.rs  rule.rs  static_mocks.rs
mry/tests/: async_method.rs  async_trait.rs  function_style_macro.rs  impl_trait.rs  iterator.rs  mock_trait.rs  nested_mock.rs  partial_mock.rs  reference_and_pattern.rs  simple_case.rs  static_function.rs
mry/tests/crate_bound/: Cargo.toml
mry/tests/crate_bound/src/: lib.rs
mry/tests/crate_bound_consumer/: Cargo.toml
mry/tests/crate_bound_consumer/src/: lib.rs
mry/tests/integration/: async_fn_in_trait.rs  async_fn_trait_variant.rs  async_method.rs  bounds.rs  complex_clone.rs  function_style_macro.rs  generics.rs  impl_trait.rs  main.rs  many_arguments.rs  mock_trait.rs  mut_param.rs  nested_mock.rs  non_send.rs  not_clone.rs  raw_pointer.rs  reference_and_pattern.rs  returns_with_recursive_call.rs  serde_struct.rs  simple_case.rs  skip.rs  skip_arg.rs  skip_fns.rs  skip_methods.rs  static_function.rs  track_caller.rs
mry/tests/serde/: Cargo.toml
mry/tests/serde/src/: lib.rs
mry_derive/: Cargo.toml
mry_macros/: Cargo.toml
mry_macros/src/: alphabets.rs  attrs.rs  create_behaviors.rs  create_matchers.rs  expr_struct.rs  item_fn.rs  item_impl.rs  item_struct.rs  item_trait.rs  lib.rs  lock.rs  method.rs  new.rs  options.rs  type_name.rs
mry_macros/src/item_impl/: method.rs  mod.rs  type_name.rs
tests/: Cargo.toml
tests/src/: async_method.rs  function_style_macro.rs  impl_trait.rs  lib.rs  mock_trait.rs  simple_case.rs
tools/: check-ci.sh
