[package]
name = "mry"
version = "0.1.7"
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A cfg-free mocking library for structs and traits, which supports partial mocks."
homepage = "https://github.com/ryo33/mry"
repository = "https://github.com/ryo33/mry"
readme = "../README.md"
keywords = ["mock", "mocking", "testing"]
categories = ["development-tools"]

[dependencies]
async-recursion = "0.3.2"
mry_macros = { package = "mry_macros", path = "../mry_macros", version = "0.1.7" }
once_cell = "1.8"
parking_lot = "0.11"

[dev-dependencies]
async-std = { version = "1.9", features = ["attributes"] }
async-trait = "0.1"
