[package]
name = "mry"
version = "0.6.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A simple but powerful mocking library that supports struct, trait, and function."
homepage = "https://github.com/ryo33/mry"
repository = "https://github.com/ryo33/mry"
readme = "../README.md"
keywords = ["mock", "mocking", "testing"]
categories = ["development-tools"]

[features]
default = []
serde = ["dep:serde"]

[dependencies]
async-recursion = "1.0"
mry_macros = { package = "mry_macros", path = "../mry_macros", version = "0.6.0" }
parking_lot = { version = "0.12" }
serde = { version = "1.0", optional = true }

[dev-dependencies]
async-std = { version = "1.9", features = ["attributes"] }
async-trait = "0.1"
trait-variant = "0.1"
mry_crate_bound = { path = "tests/crate_bound" }
mry_crate_bound_consumer = { path = "tests/crate_bound_consumer" }
mry-test-serde = { path = "tests/serde" }
