[package]
name = "mry_macros"
version = "0.9.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Macro crate for mry, a simple but powerful mocking library that supports struct, trait, and function."
homepage = "https://github.com/ryo33/mry"
repository = "https://github.com/ryo33/mry"
readme = "../README.md"
keywords = ["mock", "mocking", "testing"]
categories = ["development-tools"]

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["visit", "visit-mut", "full", "parsing"] }
darling = "0.20"

[lib]
proc-macro = true

[dev-dependencies]
pretty_assertions = "1.4"
similar-asserts = "1.1"
serde = { version = '1', features = ["derive"] }
